# clap-host

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
host/: CMakeLists.txt  audio-settings-widget.cc  engine.cc  engine.hh  main.cc  midi-settings-widget.cc  plugin-host.cc  plugin-host.hh
